--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 01:05:20 2018</p>
+         Last Run: Fri Jul 13 02:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,59 +34,59 @@
                         <td>13</td>
                         <td>13</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>3</td>
-                        <td>14</td>
-                        <td>NW</td>
-                        <td>38</td>
+                        <td>16</td>
+                        <td>NNW</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>14</td>
                         <td>14</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>5</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>34</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>31</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -135,8 +135,8 @@
                  "13",
                  "14",
                  "16",
-                 "17",
-                 "18"
+                 "18",
+                 "19"
                ]
              },
              {
@@ -148,8 +148,8 @@
                  "13",
                  "14",
                  "16",
-                 "17",
-                 "18"
+                 "18",
+                 "19"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "54",
-                 "45",
-                 "40",
-                 "38"
+                 "61",
+                 "52",
+                 "44",
+                 "39",
+                 "36"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "34",
-                 "31",
-                 "15",
-                 "18"
+                 "32",
+                 "28",
+                 "26",
+                 "12",
+                 "19"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 01:05:20 2018</p>
+         Last Run: Fri Jul 13 02:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -284,23 +284,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -385,7 +385,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -453,8 +453,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "46",
-                 "42",
+                 "45",
+                 "41",
                  "38",
                  "36"
                ]
@@ -466,9 +466,9 @@
                "data":[
                  "2",
                  "5",
-                 "13",
+                 "14",
                  "15",
-                 "43"
+                 "44"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 01:05:20 2018</p>
+         Last Run: Fri Jul 13 02:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -522,7 +522,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>27</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -531,10 +531,10 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
@@ -584,7 +584,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "26"
                ]
              },
              {
@@ -595,7 +595,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "26"
                ]
              }
            ]
@@ -656,9 +656,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "26",
-                 "29",
-                 "34"
+                 "25",
+                 "27",
+                 "33"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 01:05:20 2018</p>
+         Last Run: Fri Jul 13 02:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -707,38 +707,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>3</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>24</td>
+                        <td>E</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>4</td>
-                        <td>43</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>33</td>
+                        <td>E</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>33</td>
-                        <td>50</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -782,9 +782,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "26",
                  "25",
-                 "24",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -793,9 +793,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "26",
                  "25",
-                 "24",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -856,9 +856,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "43",
-                 "50"
+                 "34",
+                 "39",
+                 "46"
                ]
              },
              {
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "33",
-                 "38"
+                 "21",
+                 "31",
+                 "37"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 01:05:20 2018</p>
+         Last Run: Fri Jul 13 02:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -907,38 +907,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>18</td>
-                        <td>40</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>7</td>
+                        <td>39</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>22</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>19</td>
-                        <td>43</td>
+                        <td>8</td>
+                        <td>42</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>ESE</td>
-                        <td>24</td>
+                        <td>14</td>
+                        <td>E</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>20</td>
+                        <td>9</td>
                         <td>46</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>E</td>
-                        <td>28</td>
+                        <td>14</td>
+                        <td>ENE</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -982,7 +982,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "25",
                  "24",
                  "23"
                ]
@@ -993,7 +993,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "25",
                  "24",
                  "23"
                ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "19",
-                 "20"
+                 "7",
+                 "8",
+                 "9"
                ]
              },
              {
@@ -1056,8 +1056,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "40",
-                 "43",
+                 "39",
+                 "42",
                  "46"
                ]
              },
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "24",
-                 "28"
+                 "16",
+                 "18",
+                 "21"
                ]
              }
            ]
