--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 03:05:20 2018</p>
+         Last Run: Fri Jul 13 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>13</td>
                         <td>13</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>60</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>26</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,7 +82,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
+                 "60",
                  "52",
-                 "44",
+                 "43",
                  "39",
-                 "37"
+                 "36"
                ]
              },
              {
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
+                 "33",
                  "28",
-                 "26",
-                 "12",
+                 "27",
+                 "13",
                  "19"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 03:05:20 2018</p>
+         Last Run: Fri Jul 13 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -284,23 +284,23 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>3</td>
+                        <td>SSE</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>7</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -322,7 +322,7 @@
                         <td>0</td>
                         <td>34</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>39</td>
                      </tr>
@@ -372,7 +372,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -385,7 +385,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "21",
                  "22"
                ]
@@ -452,10 +452,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "44",
-                 "40",
-                 "36",
+                 "52",
+                 "45",
+                 "41",
+                 "37",
                  "34"
                ]
              },
@@ -464,10 +464,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "3",
                  "7",
                  "6",
+                 "5",
+                 "7",
                  "39"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 03:05:20 2018</p>
+         Last Run: Fri Jul 13 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 03:05:20 2018</p>
+         Last Run: Fri Jul 13 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -707,9 +707,9 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>3</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>4</td>
                         <td>33</td>
                         <td>1</td>
                         <td>14</td>
@@ -721,12 +721,12 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>39</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -736,9 +736,9 @@
                         <td>33</td>
                         <td>46</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -782,7 +782,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
                  "23"
                ]
@@ -793,7 +793,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
+                 "26",
                  "25",
                  "23"
                ]
@@ -846,8 +846,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
                  "4",
+                 "5",
                  "33"
                ]
              },
@@ -867,8 +867,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "21",
-                 "32",
-                 "39"
+                 "31",
+                 "37"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 03:05:20 2018</p>
+         Last Run: Fri Jul 13 04:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,8 +909,8 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>19</td>
-                        <td>38</td>
+                        <td>21</td>
+                        <td>39</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -921,24 +921,24 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>20</td>
-                        <td>41</td>
+                        <td>22</td>
+                        <td>42</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>21</td>
-                        <td>45</td>
+                        <td>23</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "20",
-                 "21"
+                 "21",
+                 "22",
+                 "23"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "41",
-                 "45"
+                 "39",
+                 "42",
+                 "46"
                ]
              },
              {
@@ -1067,8 +1067,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "26",
-                 "26",
-                 "29"
+                 "27",
+                 "30"
                ]
              }
            ]
